[tool.poetry]
name = "python-dynamic-programming"
version = "0.1.0"
description = ""
authors = ["Adam <me@adammartincote.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^22.3.0"}
pytest-benchmark = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tools.pytest.ini_options]
addopts = "--capture=no"
